Buffer writing to appsrc working now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,11 +17,9 @@ pkg_check_modules(GST REQUIRED
 
 
 find_package(catkin REQUIRED COMPONENTS
-  cv_bridge
-  image_transport
   roscpp
   sensor_msgs
-  std_msgs
+  nodelet
 )
 
 ## System dependencies are found with CMake's conventions
@@ -116,7 +114,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ros_rtsp
- CATKIN_DEPENDS cv_bridge image_transport roscpp sensor_msgs std_msgs
+ CATKIN_DEPENDS roscpp sensor_msgs
 #  DEPENDS system_lib
 )
 
@@ -136,6 +134,8 @@ include_directories(
 # add_library(${PROJECT_NAME}
 #   src/${PROJECT_NAME}/ros_rtsp.cpp
 # )
+add_library(image_to_rtsp_nodelet src/image2rtsp.cpp src/video.cpp)
+
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -145,9 +145,6 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(camera_publisher src/camera_publisher.cpp)
-add_executable(camera_subscriber src/camera_subscriber.cpp)
-add_executable(rtsp_server src/test-appsrc.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -157,22 +154,11 @@ add_executable(rtsp_server src/test-appsrc.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-add_dependencies(camera_publisher ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(camera_subscriber ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(rtsp_server ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(camera_publisher
-  ${catkin_LIBRARIES}
-  ${OpenCV_LIBRARIES}
-)
-target_link_libraries(camera_subscriber
-  ${catkin_LIBRARIES}
-  ${OpenCV_LIBRARIES}
-)
-target_link_libraries(rtsp_server
-  ${catkin_LIBRARIES}
-  ${GST_LIBRARIES}
+target_link_libraries(image_to_rtsp_nodelet 
+  ${catkin_LIBRARIES} 
+  ${GST_LIBRARIES} 
 )
 
 
