--- a/config/stream_setup.yaml
+++ b/config/stream_setup.yaml
@@ -1,11 +1,19 @@
+
+# "type": ["cam" , "topic"] 
+# "source": 
+#     if type=cam, location of v4l2 camera
+#     if type=topic, the ROS Image topic to subscribe to. 
+
 streams:
   stream1:
-    name: stream1
     type: cam
-    source: /dev/video0
-    mountpoint: /front
+    source: /dev/video1
+    mountpoint: /back
+    caps: video/x-raw,framerate=30/1,width=1280,height=720
+    bitrate: 500
   stream2:
-    name: stream2
     type: topic
     source: /usb_cam/image_raw
-    mountpoint: /back
+    mountpoint: /front
+    caps: video/x-raw,framerate=10/1,width=640,height=480
+    bitrate: 500
