Add option for custom port and fix indentation

--- a/config/stream_setup.yaml
+++ b/config/stream_setup.yaml
@@ -1,4 +1,5 @@
 # Set up your streams to rtsp here.
+port: "8554"
 streams: # Cannot rename - must leave this as is.
 
   stream-x:
@@ -13,4 +14,4 @@ streams: # Cannot rename - must leave this as is.
     mountpoint: /back
     caps: video/x-raw,framerate=10/1,width=640,height=480
     bitrate: 500
-  
+
